Correção das rotas

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simulador de Vendas - Brasil Cash</title>
-  <link rel="stylesheet" href="/src/assets/css/style.css">
+  <link rel="stylesheet" href="/simulador-vendasbc/src/assets/css/style.css">
 </head>
 
 <body class="body">
   <header>
   </header>
-  <img src="/src/assets/css/images/file-1696014755258.png" alt="Logo Brasil Cash" id="logo">
+  <img src="/simulador-vendasbc/src/assets/css/images/file-1696014755258.png" alt="Logo Brasil Cash" id="logo">
   <main id="geral">
     <form id="simulador__vendas">
       <div class="campo">
@@ -42,7 +42,7 @@
     <p>&copy; 2024 Pedro Augusto. Todos os direitos reservados.</p>
   </footer>
 
-  <script src="/src/scipts/app.js"></script>
+  <script src="/simulador-vendasbc/src/scipts/app.js"></script>
 
 </body>
 
