--- a/src/pages/simulador.html
+++ b/src/pages/simulador.html
@@ -15,6 +15,7 @@
   </header>
   <img src="/simulador-vendasbc/src/assets/css/images/file-1696014755258.png" alt="Logo Brasil Cash" id="logo">
   <main id="geral">
+    <!-- Tabela da simulação -->
     <table>
       <thead>
         <tr>
@@ -28,8 +29,8 @@
       <tbody id="tabela">
       </tbody>
     </table>
-    <!-- Nova tabela -->
-    <table id="tabela-parcelas">
+    <!-- Tabela de parcelas -->
+    <table id="tabela__parcelas">
       <thead>
         <tr>
           <th>Nº Parcelas</th>
@@ -37,8 +38,7 @@
           <th>Valor parcelado + taxa</th>
         </tr>
       </thead>
-      <tbody id="tabela-parcelas-body">
-        <!-- Aqui serão adicionadas as linhas dinamicamente -->
+      <tbody id="tabela__parcelasBody">
       </tbody>
     </table>
   </main>
@@ -47,7 +47,7 @@
     <p>&copy; 2024 Pedro Augusto. Todos os direitos reservados.</p>
   </footer>
 
-  <script src="/simulador-vendasbc/src/scripts/appsimulador.js"></script>
+  <script src="/simulador-vendasbc/src/scripts/app.js"></script>
 </body>
 
 </html>
