--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -10,8 +10,9 @@
 
 <body class="body">
   <header>
+    <h1>Simulador de vendas</h1>
   </header>
-  <img src="/simulador-vendasbc/src/assets/css/images/file-1696014755258.png" alt="Logo Brasil Cash" id="logo">
+  <img src="/simulador-vendasbc/src/assets/images/file-1696014755258.png" alt="Logo Brasil Cash" id="logo">
   <main id="geral">
     <form id="simulador__vendas">
       <div class="campo">
