--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -13,12 +13,15 @@
     <h1>Simulador de vendas</h1>
   </header>
   <img src="/simulador-vendasbc/src/assets/images/file-1696014755258.png" alt="Logo Brasil Cash" id="logo">
+  <!-- Conteudo principal da página -->
   <main id="geral">
     <form id="simulador__vendas">
+      <!-- Campo valor venda -->
       <div class="campo">
         <label for="valor__venda">Valor da venda</label>
         <input type="text" id="valor__venda">
       </div>
+      <!-- Campo quantidade de parcelas -->
       <div class="campoDuplo">
         <div class="campo">
           <label for="qtde_parcelas">Quantidade de parcelas:</label>
@@ -26,6 +29,7 @@
             <option value="" disabled selected>Quantidade de parcelas</option>
           </select>
         </div>
+        <!-- Campo escolha a bandeira -->
         <div class="campo">
           <label for="bandeiras">Escolha a bandeira:</label>
           <select id="bandeiras">
@@ -33,11 +37,13 @@
           </select>
         </div>
       </div>
+      <!-- Botão simular venda -->
       <div class="campo">
         <button type="submit" id="btn__simularVenda">Simular Venda</button>
       </div>
     </form>
   </main>
+  <!-- Rodapé -->
   <footer>
     <p>&copy; 2024 Pedro Augusto. Todos os direitos reservados.</p>
   </footer>
