--- a/src/pages/simulador.html
+++ b/src/pages/simulador.html
@@ -10,6 +10,7 @@
 
 <body class="body">
   <header>
+    <!-- Botão para voltar a tela principal -->
     <button class="button" id="btn-voltar">Voltar</button>
     <h1>Simulador de vendas</h1>
   </header>
@@ -42,7 +43,7 @@
       </tbody>
     </table>
   </main>
-
+  <!-- Rodapé -->
   <footer>
     <p>&copy; 2024 Pedro Augusto. Todos os direitos reservados.</p>
   </footer>
